--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ### web
 server.port=8080
-server.servlet.context-path=/xxl-job-admin
+server.servlet.context-path=/
 
 ### actuator
 management.server.servlet.context-path=/actuator
@@ -23,10 +23,13 @@ mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 #mybatis.type-aliases-package=com.xxl.job.admin.core.model
 
 ### xxl-job, datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=root_pwd
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+#spring.datasource.username=root
+#spring.datasource.password=root_pwd
+
+## xxl-job sqlite
+spring.datasource.url=jdbc:sqlite:/Users/boommanpro/IdeaProjects/xxl-job/doc/sqlite/test.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
 
 ### datasource-pool
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
