--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.freemarker.request-context-attribute=request
 spring.freemarker.settings.number_format=0.##########
 
 ### mybatis
+mybatis.configuration.database-id=sqlite
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 #mybatis.type-aliases-package=com.xxl.job.admin.core.model
 
