--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -41,7 +41,7 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.pool-name=HikariCP
 spring.datasource.hikari.max-lifetime=900000
 spring.datasource.hikari.connection-timeout=10000
-spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.connection-test-query=PRAGMA journal_mode=WAL;
 spring.datasource.hikari.validation-timeout=1000
 
 ### xxl-job, email
@@ -67,3 +67,20 @@ xxl.job.triggerpool.slow.max=100
 
 ### xxl-job, log retention days
 xxl.job.logretentiondays=30
+
+xxl.job.executor.enable=true
+
+### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
+xxl.job.admin-addresses=http://127.0.0.1:8080/
+
+### xxl-job executor appname
+xxl.job.executor.appname=xxl-job-executor-sample
+### xxl-job executor registry-address: default use address to registry , otherwise use ip:port if address is null
+xxl.job.executor.address=
+### xxl-job executor server-info
+xxl.job.executor.ip=
+xxl.job.executor.port=9999
+### xxl-job executor log-path
+xxl.job.executor.logpath=/data/applogs/xxl-job/jobhandler
+### xxl-job executor log-retention-days
+xxl.job.executor.logretentiondays=30
