--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ### web
 server.port=8080
-server.servlet.context-path=/xxl-job-admin
+server.servlet.context-path=/
 
 ### actuator
 management.server.servlet.context-path=/actuator
@@ -63,3 +63,21 @@ xxl.job.triggerpool.slow.max=100
 
 ### xxl-job, log retention days
 xxl.job.logretentiondays=30
+
+
+xxl.job.executor.enable=true
+
+### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
+xxl.job.admin-addresses=http://127.0.0.1:8080/
+
+### xxl-job executor appname
+xxl.job.executor.appname=xxl-job-executor-sample
+### xxl-job executor registry-address: default use address to registry , otherwise use ip:port if address is null
+xxl.job.executor.address=
+### xxl-job executor server-info
+xxl.job.executor.ip=
+xxl.job.executor.port=9999
+### xxl-job executor log-path
+xxl.job.executor.logpath=/data/applogs/xxl-job/jobhandler
+### xxl-job executor log-retention-days
+xxl.job.executor.logretentiondays=30
